# lmcrw-kilobots

./: .gitignore  README.md  main.py
data/Fpt-performance/: LMCRW_10R_1.8a_0.75p_180cm.tsv  LMCRW_5R_1.8a_0.75p_45cm.tsv
scripts/: exploratory_parameters_search_fpt.py  fpt_evaluation.py  io_scripts.py  plot_scripts.py  trials_number_evaluation.py  weibull_analyzer.py
simulation_config/: README.md  exp_config.xml  kilobot_generic_controller.argos  kilobot_generic_controller_viz.argos
src/: ArgosSimulation.py  CMakeLists.txt  KilobotsSearchExperiment.py  README.md  generate_config_visual.py  generate_configs.py
src/behaviors/: CMakeLists.txt  CRWLEVY.c  Target.c  distribution_functions.c  dritto.c
src/cmake/: ARGoSBuildChecks.cmake  ARGoSCheckQTOpenGL.cmake
src/kilobots/: CMakeLists.txt  Makefile
src/loop_functions/: CMakeLists.txt  ci_kilobot_loop_functions.cpp  ci_kilobot_loop_functions.h
src/utils/: ExperimentPerformance.py  LMCRW.py  Targets.py
